# bxibase

./: .autotools  .cproject  .gitignore  .project  .pydevproject  .travis.yml  .vcsignore  AdditionalProjectInterpreterInfo.pydevinfo  CONTRIBUTING.md  Jenkinsfile  Makefile.am  README.ipynb  README.md  bxibase.spec  compiler.py  configure.ac  custom-test-driver  dependencies.sh  deps.make  env.set  h2py.sh  valgrind.supp
doc/: Doxyfile.in  Makefile.am
misc/: ideas.rst  ideas.txt
misc/article/hlpic/: High Level Programming in C.ipynb  High Level Programming in C.mm
misc/article/posless/: About Posless.ipynb
misc/articles/: Dockerfile.alpine-bxibase-jupyter  Dockerfile.centos-bxibase-jupyter  Dockerfile.centos-bxibase-jupyter-c  Dockerfile.centos-jupyter  Dockerfile.centos-jupyter-c  Makefile
misc/articles/hlpic/: Dockerfile.centos-hlpic  Dockerfile.hlpic  High Level Programming in C.ipynb  Logging System.ipynb  Makefile  Memory Management.ipynb
misc/articles/hlpic/resources/: Concurrent, Parallel and Distributed Programming.ipynb  Error Management.ipynb  Logging System.ipynb  Memory Management.ipynb  String Manipulation.ipynb  index.ipynb
misc/articles/utbls/: Dockerfile.utbls  Makefile  Understanding the BXI Logging System.ipynb
misc/articles/utbls/resources/: Configuration.ipynb  Features.ipynb  Logging System.ipynb  Performance.ipynb  Tooling.ipynb  Usage.ipynb  index.ipynb  performance.ipynb
misc/bench/: ideas.txt  string_concat.py
misc/bench/bxilog/: .~lock.bench.ods#  Makefile  bench-c_bxilog.c  bench-c_zlog.c  bench-py_bxilog_mp  bench-py_bxilog_thr  bench-py_logging_mp  bench-py_logging_thr  bench.ods  bench_bxilog_mp.py  bench_bxilog_thr.py  bench_clmtrace_mp.py  bench_clmtrace_thr.py  bench_logging_mp.py  bench_logging_thr.py  benchall.sh  bxilog_bench.c  clmtrace.conf  common.c  common.h  compile.sh  preprocess_data.sh  process_val.sh  run.sh  zlog.conf  zlog_bench.c  zlog_bench.ch
misc/bench/bxilog/data/svn-r9384/: bench_bxilog_mp.py.bench  bench_bxilog_mp.py.time  bench_bxilog_thr.py.bench  bench_bxilog_thr.py.time  bench_clmtrace_mp.py.bench  bench_clmtrace_mp.py.time  bench_clmtrace_thr.py.bench  (+9 more)
misc/bench/number_of_digits/: bench.c
misc/bench/timeclock/: benchclock.c
misc/coding/: bxi-c-coding-style.xml  convention.txt  template.c  template.h
misc/compat/: multiprocessing_and_logging.py  python_failer.py  threading_and_logging.py
misc/doc/bxilog/: Makefile  bxilog-arch.eps  bxilog-arch.odg  bxilog-fsm.dot  bxilog-fsm.eps  bxilog.lyx
misc/doc/ideas/: performance.txt
misc/doc/oldies/: BxiFabricDbStudy.odt
misc/docker/: Dockerfile.bxibase  Dockerfile.centos-bxibase  Dockerfile.centos-bxibase-devel  Dockerfile.centos-bxibase.deps  Dockerfile.centos-epel  Dockerfile.centos-jupyter  Dockerfile.centos-jupyter-c  Dockerfile.centos-pdp  Dockerfile.jupyter  Makefile
misc/issues/init_in_filename/: logging_init.py
misc/issues/init_in_filename/mymodule/: __init__.py
misc/issues/libzmq-1590/: Makefile  client  client.c  readme.txt  server  server.c
misc/issues/segfault-large_string-22389/: pwrbug
misc/issues/zmq-inproc-leak/: .gitignore  Makefile  leak.c  test  test.c
misc/patents/bxilog/: 218882FR-2.doc  218882FR-3.doc  218882FR.odt  bxilog.odt  memo.odt
misc/profile/: bxilog-profile.py
misc/shared/: Makefile.am  check_vcsrevision.sh  custom-test-driver  pylint.rc  template_version.py.in
misc/shared/docker/mkrpms/: Dockerfile.centos-epel  Dockerfile.centos-mkrpms  mkrpms
misc/shared/docker/pdp/: Dockerfile.centos-pdp  mkrpms
misc/shared/m4/: common.m4  python.m4
misc/soa/: sdk-choosen.txt
misc/travis/: install-dependencies.sh
misc/util/: zmq_dbg
packaged/: Makefile.am
packaged/doc/: Doxyfile.in  Doxyfile_specific.in  Makefile.am  README.md  gen_doxydeps.sh
packaged/doc/examples/: bxilog-cfg.c  bxilog-config.py  bxilog-err.c  bxilog-multiprocessing  bxilog-multiprocessing.py  bxilog-posless  bxilog-posless.py  bxilog_cfg.c  bxilog_config.py  bxilog_err.c  bxilog_example.c  bxilog_multiprocessing.py  bxistr-examples.c  bxistr_examples.c  cli.bxilog.conf  daemon.bxilog.conf  history.bxilog.conf  monitor.bxilog.conf  mybxilog.conf
packaged/include/: Makefile.am
packaged/include/bxi/base/: err.h  log.h  log_file_handler.h  mem.h  str.h  str.h.in  time.h  version.h.in  zmq.h
packaged/include/bxi/base/log/: assert.h  config.h  console_handler.h  exit.h  file_handler.h  filter.h  handler.h  level.h  logger.h  monitor_handler.h  netsnmp_handler.h  null_handler.h  registry.h  remote_handler.h  remote_receiver.h  report.h  signal.h  snmplog_handler.h  syslog_handler.h  thread.h
packaged/lib/: Makefile.am  Makefile_spec  bxilog.py
packaged/lib/bxi/: __init__.py  ffi.py
packaged/lib/bxi/base/: __init__.py  builder.py  cffi_builder.py  err.py  log.py  logged_posless.py  parserconf.py  posless.py  sign.py  signal.py  summary.py  zmq.py
packaged/lib/bxi/base/log/: __init__.py  config.py  console_handler.py  file_handler.py  filter.py  logger.py  netsnmp_handler.py  null_handler.py  remote_handler.py  remote_receiver.py  syslog_handler.py
packaged/src/: bxilog-monitor.c  bxilog_monitor.c  err.c  log.c  mem.c  str.c  time.c  zmq.c
packaged/src/log/: assert.c  cfg.c  cfg.h  config.c  config_impl.h  console_handler.c  core.c  core.h  exit.c  file_handler.c  file_handler_stdio.c  filter.c  fork.c  fork.h  fork_impl.h  handler.c  handler.h  handler_impl.h  level.c  log_console_handler.c  log_file_handler.c  log_impl.h  log_null_handler.c  logger.c  monitor_handler.c  netsnmp_handler.c  null_handler.c  registry.c  registry_impl.h  remote_handler.c  remote_receiver.c  report.c  signal.c  signal.h  snmplog_handler.c  syslog_handler.c  thread.c  tsd.c  tsd.h  tsd_impl.h
tests/: Makefile.am  bxilog_suite.py  posless_suite.py  remote_logger.py  simple_bxilog_user.py  simple_bxilogger.py  specific_argparse_poslessed.py  specific_posless.py  test_err.c  test_logger.c  test_mem.c  test_str.c  test_time.c  test_zmq.c  testbxierr.py  testbxilog.py  testparserconf.py  testremotehandler.py  uncaught.py  unit_t.c
